--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>JavaScript Lab</title>
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-  hello
+ `class Polygon {
+  constructor(arrOfSides) {
+    self.arrOfSides = arrOfSides
+  }
+  get countSides() {
+    return self.arrOfSides.length
+  }
+  get perimeter() {
+    return self.arrOfSides.reduce((previous, current) => current += previous)
+  }
+} // Ends Polygon Class
+
+class Triangle extends Polygon {
+  get isValid() {
+  
+  }
+} // Ends Triangle Class`
 </body>
 </html>
